// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-button spec: Render logic -> renders with button text FOO 1`] = `
<amplify-button>
  <!---->
  <button class="amplify-ui--button css-1iso3kp" type="button">
    FOO
  </button>
</amplify-button>
`;

exports[`amplify-button spec: Render logic -> renders with danger class when button type is reset 1`] = `
<amplify-button type="reset">
  <!---->
  <button class="amplify-ui--button css-13x64y8" type="reset">
    FOO
  </button>
</amplify-button>
`;

exports[`amplify-button spec: Render logic -> renders with no button text 1`] = `
<amplify-button>
  <!---->
  <button class="amplify-ui--button css-1iso3kp" type="button"></button>
</amplify-button>
`;

exports[`amplify-button spec: Render logic -> renders without Emotion CSS class when overrideStyle is true 1`] = `
<amplify-button override-style="true">
  <!---->
  <button class="amplify-ui--button" type="button">
    FOO
  </button>
</amplify-button>
`;
